PROD-9-26-19/force-app/main/default/objects/Bid__c/fields/Area_Size__c.field-meta.xml
<CustomField>
    <fullName>Area_Size__c</fullName>
    <label>Area/Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>