PROD-9-26-19/force-app/main/default/objects/Bid__c/fields/BID_Round__c.field-meta.xml
<CustomField>
    <fullName>BID_Round__c</fullName>
    <label>BID Round (#)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>