PROD-9-26-19/force-app/main/default/objects/Bid__c/fields/Commitment_Letter_Received__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Letter_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commitment Letter Received</label>
    <type>Checkbox</type>
</CustomField>