PROD-9-26-19/force-app/main/default/objects/Bid__c/fields/Deposit_1__c.field-meta.xml
<CustomField>
    <fullName>Deposit_1__c</fullName>
    <label>Deposit 1</label>
    <type>TextArea</type>
</CustomField>