PROD-9-26-19/force-app/main/default/objects/Bid__c/fields/EV_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EV_EBITDA__c</fullName>
    <label>EV/EBITDA</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>