PROD-9-26-19/force-app/main/default/objects/Bid__c/fields/Financing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Financing_Notes__c</fullName>
    <label>Financing Notes</label>
    <type>TextArea</type>
</CustomField>