PROD-9-26-19/force-app/main/default/objects/Bid__c/fields/Financing_Required__c.field-meta.xml
<CustomField>
    <fullName>Financing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financing Required</label>
    <type>Checkbox</type>
</CustomField>