PROD-9-26-19/force-app/main/default/objects/Bid__c/fields/NOI__c.field-meta.xml
<CustomField>
    <fullName>NOI__c</fullName>
    <label>NOI</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>