PROD-9-26-19/force-app/main/default/objects/Bid__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <label>Purchase Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>