PROD-9-26-19/force-app/main/default/objects/Bid__c/fields/Purchase_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Adjustment__c</fullName>
    <description>The value of the adjustment to the original purchase price amount</description>
    <inlineHelpText>Enter the value of the Purchase Price Adjustment</inlineHelpText>
    <label>Purchase Price Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>