PROD-9-26-19/force-app/main/default/objects/Bid__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <inlineHelpText>To determine the top bids and winner</inlineHelpText>
    <label>Bid Round Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Selected Purchaser</fullName>
            </value>
            <value>
                <fullName>Shortlisted Bid</fullName>
            </value>
            <value>
                <fullName>Rejected Bid</fullName>
            </value>
            <value>
                <fullName>Top Buyers</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Will Not Bid</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>